--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,28 +4,30 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <h5><b><p id="smashCounter" class="smashText">Smashed: {{smashCounter}}</p></b></h5>
-      </div>
-      <div class="col-sm">
-        <h5> <b><p id="passCounter" class="passText">Passed: {{passCounter}}</p></b></h5>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div class="text-center">
+        <div *ngIf="this.folderSelected" class="text-center">
+          <h2 id="imgName">{{this.getName(this.imagesList[this.folderSelected].images[this.imagesList[this.folderSelected].count].name)}}</h2>
           <img *ngIf="folderSelected && imagesLoaded" class="img-fluid" id="imageid" src="{{this.imagesList[this.folderSelected].images[this.imagesList[this.folderSelected].count].base64}}" />
           <div class="text-right">
             <h5><p id="totalCounter"><b>Total: {{totalCounter}}</b></p></h5>
           </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">
+            <h5><p id="smashCounter" class="smashText"><b>Smashed: {{smashCounter}}</b></p></h5>
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn green" (click)="smash()">SMASH</button>
+            <button type="button" class="btn btn-danger" (click)="pass()">PASS</button>
+          </div>
+          <div class="col-sm">
+            <h5> <p id="passCounter" class="passText"><b>Passed: {{passCounter}}</b></p></h5>
+          </div>
 
+          <div class="text-right">
+            <button type="button" class="btn btn-primary" (click)="clearCounter()">CLEAR</button>
+          </div>
         </div>
-        <div class="text-center">
-          <button type="button" class="btn green" (click)="smash()">SMASH</button>
-          <button type="button" class="btn btn-danger" (click)="pass()">PASS</button>
-        </div>
-        <div class="text-right">
-          <button type="button" class="btn btn-primary" onclick="clearCounter()">CLEAR</button>
-        </div>
+
       </div>
     </div>
     <div class="row p-4 text-center">
@@ -55,23 +57,22 @@
   <div class="row">
     <div class="col-md-6">
       <h3>Smashed</h3>
+      <div id="smashedImg">
+
+      </div>
     </div>
     <div class="col-md-6">
       <h3>Passed</h3>
-    </div>
-  </div>
-  <div class="row">
-    <div id="smashedImg" class="col-md-6">
+      <div id="passedImg">
 
-    </div>
-    <div id="passedImg" class="col-md-6">
-
+      </div>
     </div>
   </div>
 </div>
 <div id="ventanaModal" class="modal">
   <div class="modal-content">
     <div class="text-center">
+      <h1 id="modalImgName"></h1>
       <img id="modalImg" />
     </div>
   </div>
